Added base layout plus some other logic

--- a/src/app.css
+++ b/src/app.css
@@ -14,8 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html,
+body,
+#app {
+  height: 100%;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
 }
